# superpoint-lightglue-libtorch-cpp

./: .gitattributes  CMakeLists.txt  README.md  lightglue_export.ipynb  main.cpp  requirements.txt  torchscript_export.py
SuperpointLightglue/: feature_matching.cpp  feature_matching.h  lightglue.cpp  lightglue.h  superpoint.cpp  superpoint.h  utils.cpp  utils.h
lightglue/: lightglue.py  superpoint.py  utils.py
weights/: lightglue_scripted.pt  superpoint_lightglue_v0-1_arxiv.pth  superpoint_scripted.pt
